# arena

./: .gitignore  .pre-commit-config.yaml  README.md  compare_kkt.sh  compare_upgrad_speed.sh  compute.py  main.py  pyproject.toml  setup_env.sh
configs/: forward_backward_runtime.yaml  gramian_runtime.yaml  mtl_backward_runtime.yaml  project_weights_kkt.yaml  upgrad_runtime.yaml
scripts/: analyze.py  compute.py
src/aggregator_arena/: configurations.py  paths.py  runtime.py
src/arena/: aggregation_time.py  aggregator_objective.py  architectures.py  configurations.py  dual_projection_objective.py  inputs.py  interface.py  interfaces.py  matrix_samplers.py  objective.py  objectives.py  paths.py
